# cl-analytics

./: pyproject.toml
Backtest/: BacktestModel.py
